--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-SECRET_KEY=supersecretkey123
-MYSQL_HOST=127.0.0.1
-MYSQL_USER=flaskuser
-MYSQL_PASSWORD=flaskpass
+MYSQL_HOST=flask-db.csp6soueyf3p.us-east-1.rds.amazonaws.com
+MYSQL_PORT=3306
+MYSQL_USER=admin
+MYSQL_PASSWORD=StrongPass123!
 MYSQL_DB=flaskdb
