--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -36,3 +36,17 @@ jobs:
                 push: true
                 tags: rg7121/flask-auth-devops:latest
 
+          - name: Set up kubectl
+            uses: azure/setup-kubectl@v3
+            with:
+              version: 'latest'
+
+          - name: Set up Kubeconfig
+            run: |
+              mkdir -p ~/.kube
+              echo "${{ secrets.KUBE_CONFIG_DATA }}" | base64 -d > ~/.kube/config
+
+          - name: Deploy to EKS
+            run: |
+              kubectl apply -f k8s/
+              kubectl rollout status deployment flask-deployment -n ${{ secrets.K8S_NAMESPACE }}
