--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -14,7 +14,13 @@ jobs:
         steps:
           - name: Checkout Code
             uses: actions/checkout@v3
-
+          - name: Set up AWS creds
+            uses: aws-actions/configure-aws-credentials@v2
+            with:
+              aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+              aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+              aws-region: us-east-1
+            
           - name: Set up python ( for future tests or tools)
             uses: actions/setup-python@v4
             with:
