--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,58 +1,53 @@
-name: Build Flask Docker image
+name: Build and Deploy Flask App to EKS
 
-on: 
+on:
   push:
     branches:
-       - main
-  workflow_dispatch: # manual trigger FROM gitHub UI if push doesnot work automatically
+      - main
+  workflow_dispatch:
 
 jobs:
-    build: 
-        name: Build Docker image
-        runs-on: ubuntu-latest
+  build-and-deploy:
+    name: Build Docker image and Deploy to EKS
+    runs-on: ubuntu-latest
 
-        steps:
-          - name: Checkout Code
-            uses: actions/checkout@v3
-          - name: Set up AWS creds
-            uses: aws-actions/configure-aws-credentials@v2
-            with:
-              aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-              aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-              aws-region: us-east-1
-            
-          - name: Set up python ( for future tests or tools)
-            uses: actions/setup-python@v4
-            with:
-              python-version: '3.12'
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-          - name: Setup Docker Buildx
-            uses: docker/setup-buildx-action@v2
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
 
-          - name: Login to DockerHub
-            uses: docker/login-action@v2
-            with:
-               username: ${{ secrets.DOCKER_USERNAME }}
-               password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Update kubeconfig for EKS
+        run: aws eks update-kubeconfig --region us-east-1 --name blackforge-eks-cluster
 
-          - name: Build and Push Docker image
-            uses: docker/build-push-action@v5
-            with: 
-                context: .
-                push: true
-                tags: rg7121/flask-auth-devops:latest
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.12'
 
-          - name: Set up kubectl
-            uses: azure/setup-kubectl@v3
-            with:
-              version: 'latest'
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-          - name: Set up Kubeconfig
-            run: |
-              mkdir -p ~/.kube
-              echo "${{ secrets.KUBE_CONFIG_DATA }}" | base64 -d > ~/.kube/config
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-          - name: Deploy to EKS
-            run: |
-              kubectl apply -f k8s/
-              kubectl rollout status deployment flask-deployment -n ${{ secrets.K8S_NAMESPACE }}
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: rg7121/flask-auth-devops:latest
+
+      - name: Deploy to EKS
+        run: |
+          kubectl create namespace flask --dry-run=client -o yaml | kubectl apply -f -
+          kubectl apply -f k8s/ -n flask
+          kubectl rollout status deployment/flask-deployment -n flask
