--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -54,4 +54,4 @@ jobs:
         run: |
           kubectl create namespace flask --dry-run=client -o yaml | kubectl apply -f -
           kubectl apply -f k8s/ -n flask
-          kubectl rollout status deployment/flask-deployment -n flask
+          kubectl rollout status deployment/flask-app -n flask
