--- a/k8s/secrets.yaml
+++ b/k8s/secrets.yaml
@@ -7,3 +7,4 @@ type: Opaque
 stringData:
   MYSQL_USER: "admin"
   MYSQL_PASSWORD: "StrongPass123!"
+  DB_HOST: "flask-db.csp6soueyf3p.us-east-1.rds.amazonaws.com"
