--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -50,6 +50,12 @@ jobs:
           push: true
           tags: rg7121/flask-auth-devops:latest
 
+      - name: Deploy Init Job
+        run: |
+          kubectl apply -f k8s/init-job.yaml -n flask
+          kubectl wait --for=condition=complete job/db-init-job -n flask --timeout=60s || true
+          kubectl delete job db-init-job -n flask || true
+
       - name: Deploy to EKS
         run: |
           kubectl create namespace flask --dry-run=client -o yaml | kubectl apply -f -
