--- a/k8s/secrets.yaml
+++ b/k8s/secrets.yaml
@@ -5,6 +5,9 @@ metadata:
   namespace: flask
 type: Opaque
 stringData:
+  MYSQL_HOST: "flask-db.csp6soueyf3p.us-east-1.rds.amazonaws.com"
+  MYSQL_PORT: "3306"
   MYSQL_USER: "admin"
   MYSQL_PASSWORD: "StrongPass123!"
-  DB_HOST: "flask-db.csp6soueyf3p.us-east-1.rds.amazonaws.com"
+  MYSQL_DB: "flaskdb"
+  SECRET_KEY: "somethingSuperSecretAndLong"
