--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -59,11 +59,14 @@ jobs:
           ignore-unfixed: true
           vuln-type: os,library
           severity: CRITICAL
-          
+
       - name: SonarQube Scan
         uses: sonarsource/sonarqube-scan-action@v2
         with:
           projectBaseDir: .
+          args: >
+            -Dsonar.projectKey=flask-auth-devops
+            -Dsonar.sources=.
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
