--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -6,6 +6,11 @@ on:
       - main
   workflow_dispatch:
 
+env:
+  IMAGE_NAME: flask-auth
+  REGISTRY_URL: a8bdb61a08f3249508e82b2f865e4d88-1033672356.us-east-1.elb.amazonaws.com:5000
+
+
 jobs:
   build-and-deploy:
     name: Build Docker image and Deploy to EKS
@@ -42,18 +47,21 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+      
+      - name: Log in to Nexus Docker Registry
+        run: echo "${{ secrets.NEXUS_PASSWORD }}" | docker login ${{ env.REGISTRY_URL }} -u ${{ secrets.NEXUS_USERNAME }} --password-stdin
 
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          tags: rg7121/flask-auth-devops:latest
+          tags: ${{ env.REGISTRY_URL }}/${{ env.IMAGE_NAME }}:latest
 
       - name: Trivy Scan - Docker Image
         uses: aquasecurity/trivy-action@0.13.0
         with:
-          image-ref: rg7121/flask-auth-devops:latest
+          image-ref: ${{ env.REGISTRY_URL }}/${{ env.IMAGE_NAME }}:latest
           format: table
           exit-code: 1
           ignore-unfixed: true
@@ -76,6 +84,16 @@ jobs:
           kubectl apply -f k8s/init-job.yaml -n flask
           kubectl wait --for=condition=complete job/db-init-job -n flask --timeout=60s || true
           kubectl delete job db-init-job -n flask || true
+     
+      - name: Create Nexus Pull Secret
+        run: |
+          kubectl create secret docker-registry nexus-docker-secret \
+             --docker-server=${{ env.REGISTRY_URL }} \
+             --docker-username=${{ secrets.NEXUS_USERNAME }} \
+             --docker-password=${{ secrets.NEXUS_PASSWORD }} \
+             --docker-email=dummy@example.com \
+             --namespace=flask --dry-run=client -o yaml | kubectl apply -f -
+
 
       - name: Deploy to EKS
         run: |
