--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -47,6 +47,12 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Trust Nexus as Insecure Registry
+        run: |
+            echo '{ "insecure-registries":["a8bdb61a08f3249508e82b2f865e4d88-1033672356.us-east-1.elb.amazonaws.com:5000"] }' | sudo tee /etc/docker/daemon.json
+            sudo systemctl restart docker
+
       
       - name: Log in to Nexus Docker Registry
         run: echo "${{ secrets.NEXUS_PASSWORD }}" | docker login ${{ env.REGISTRY_URL }} -u ${{ secrets.NEXUS_USERNAME }} --password-stdin
@@ -61,7 +67,7 @@ jobs:
       - name: Trivy Scan - Docker Image
         uses: aquasecurity/trivy-action@0.13.0
         with:
-          image-ref: ${{ env.REGISTRY_URL }}/${{ env.IMAGE_NAME }}:latest
+          image-ref: flask-auth:latest
           format: table
           exit-code: 1
           ignore-unfixed: true
