--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MYSQL_HOST=flask-db.csp6soueyf3p.us-east-1.rds.amazonaws.com
+MYSQL_HOST=db
 MYSQL_PORT=3306
 MYSQL_USER=admin
 MYSQL_PASSWORD=StrongPass123!
