--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,4 +26,32 @@ jobs:
         run: aws eks update-kubeconfig --name flask_cluster --region us-east-1
 
       - name: Test Kubernetes connection
-        run: kubectl get nodes
+        run: kubectl get nodes 
+      - name: Set up python 
+        uses: actions/setup-python@v4 
+        with: 
+           python-version: '3.12'
+      - name: Setup docker login 
+        uses: docker/login-action@v2 
+        with: 
+           username: ${{ secrets.Docker_user }} 
+           password: $ {{ secrets.Docker_pass }} 
+      - name: build and push coker image 
+        uses: docker/build-push-action@v5 
+        with: 
+          context: .
+          push: true 
+          tags: neeraj2806/flask-authenticaton:latest 
+      - name: Scan docker image
+        uses: aquasecurity/trivy-action@0.13.0 
+        with: 
+          image-ref: neeraj2806/flask-authentication:latest 
+          format: table 
+          exit-code: 1 
+          severity: 'CRITICAL,HIGH' 
+      - name: Deploy to EKS 
+        run: | 
+           kubectl create namespace flask --dry-run=client -o yaml | kubectl apply -f -
+           kubectl apply -f flask-project/k8s/ -n flask
+           kubectl rollout status deployment/flask-deployment -n flask
+
