--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,8 +34,8 @@ jobs:
       - name: Setup docker login 
         uses: docker/login-action@v2 
         with: 
-           username: ${{ secrets.Docker_user }} 
-           password: $ {{ secrets.Docker_pass }} 
+           username: ${{ secrets.DOCKER_USER }} 
+           password: $ {{ secrets.DOCKER_PASS }} 
       - name: build and push coker image 
         uses: docker/build-push-action@v5 
         with: 
