--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,12 +36,12 @@ jobs:
         with: 
            username: ${{ secrets.DOCKER_USER }} 
            password: ${{ secrets.DOCKER_PASS }} 
-      - name: build and push coker image 
+      - name: build and push docker image 
         uses: docker/build-push-action@v5 
         with: 
           context: .
           push: true 
-          tags: neeraj2806/flask-authenticaton:latest 
+          tags: neeraj2806/flask-authentication:latest 
       - name: Scan docker image
         uses: aquasecurity/trivy-action@0.13.0 
         with: 
