--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,6 +48,7 @@ jobs:
           image-ref: neeraj2806/flask-authentication:latest 
           format: table 
           exit-code: 1 
+          ignore-unfixed: true
           severity: 'CRITICAL,HIGH' 
       - name: Deploy to EKS 
         run: | 
