--- a/.github/workflows/build1.yml
+++ b/.github/workflows/build1.yml
@@ -10,7 +10,7 @@ jobs:
 
      steps:
        - name: checkout-code
-         uses: actions/checkout@V3 
+         uses: actions/checkout@v3 
        - name: Install terraform 
          uses: hashicorp/setup-terraform@v2 
          with: 
