--- a/.github/workflows/build1.yml
+++ b/.github/workflows/build1.yml
@@ -30,6 +30,7 @@ jobs:
          working-directory: ./flask-project/terraform 
        - name: terraform apply 
          run: terraform apply --auto-approve
+         working-directory: ./flask-project/terraform
          
        - name: Update kubeconfig for EKS
          run: aws eks update-kubeconfig --name flask_cluster --region us-east-1
